@@ -1,5 +1,11 @@
 2007-02-20  Simon Goodall  <libwfut@simongoodall.co.uk>
 
+	* libwfut/IO.cpp: Added some more error checks.
+
+	* tools/wfut.cpp: Updated some formatting and comments.
+
+2007-02-20  Simon Goodall  <libwfut@simongoodall.co.uk>
+
 	* tools/wfut.cpp: Added simple usage information.
 
 2007-02-19  Simon Goodall  <libwfut@simongoodall.co.uk>
